<resources>
    <string name="app_name">Dayan App</string>
    <string name="login_text">Login</string>

    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>

    <string name="sign_in_text">Sign In</string>
    <string name="have_an_account">¿Ya tienes una cuenta? Inicia Sesión</string>

    <string name="register_text">Register</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="dont_have_an_account">¿Aún no tienes una cuenta? Registrate</string>

    <string name="itunesapi">iTunesAPI</string>
    <string name="search">search</string>
    <string name="image">ImageMusica</string>
    <string name="imageaction">ImageAction</string>

</resources>