<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/bg_login_gradient">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/login_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lyInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            tools:text="Luaish"
            android:backgroundTint="@color/white_alpha"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white_alpha"
            android:hint="@string/username_text"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white_alpha" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_alpha"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white_alpha"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white_alpha" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olvidaste tu contraseña?"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/have_account"
        />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/lyInputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_bg"
        android:onClick="signIn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>